--- a/CommodityTracker/templates/commodity_index.html
+++ b/CommodityTracker/templates/commodity_index.html
@@ -16,19 +16,19 @@
     </thead>
     <tbody>
         <tr>
-          <td> <a href="{% url 'categories' %}">Categories</a> </td>
+          <td> <a href="#">Categories</a> </td>
           <td class="align-middle"> <small class="text-muted d-block">Description</small> </td>
           <td class="align-middle"> 0 </td>
         </tr>
 
         <tr>
-            <td> <a href="{% url 'commodities' %}">Commodities</a> </td>
+            <td> <a href="#">Commodities</a> </td>
             <td class="align-middle"> <small class="text-muted d-block">Description</small> </td>
             <td class="align-middle"> 0 </td>
         </tr>
 
         <tr>
-        <td> <a href="{% url 'timeseries' %}">Time Series</a> </td>
+        <td> <a href="#">Time Series</a> </td>
         <td class="align-middle"> <small class="text-muted d-block">Description</small> </td>
         <td class="align-middle"> 0 </td>
         </tr>          
