--- a/CommodityTracker/templates/CommodityTracker/commodity_benchmark.html
+++ b/CommodityTracker/templates/CommodityTracker/commodity_benchmark.html
@@ -8,20 +8,16 @@
 {% block breadcrumb %}
 <li class="breadcrumb-item"><a href="{% url 'bakery-portal-index' %}">Home</a></li>
 <li class="breadcrumb-item"><a href="#">Categories</a></li>
-<li class="breadcrumb-item active">Commodities</li>
+<li class="breadcrumb-item"><a href="#">Commodities</a></li>
+<li class="breadcrumb-item active">Benchmark</li>
 {% endblock breadcrumb %}
 
 
 {% block content %}
 
     <div class="mb-4 text-right">
-        <a href="{% url 'benchmark-commodity' 1 2 %}" class="btn btn-primary">Benchmark against internal purchase</a>
+        <a href="#" class="btn btn-primary">Benchmark against internal purchase</a>
     </div>
-
-
-    <h3>Title: {{ commodity }}</h3>
-
-    <p><strong>commodity:</strong> {{ commodity }}</p> <!-- author detail link not yet defined -->
 
 
 
@@ -31,8 +27,8 @@
         <div class="card-body p-3">
           <div class="row mb-3">
             <div class="col-10">
-                <H1>Historical Price Evolution</H1>
-                <div id="chart_div_json"></div>
+                <div class="card mb-2 border-dark " >Benchmarking [A] against Base Commodity [B] </div>
+                <div style="height: 250px"  id="chart_div_json"></div>
             </div>
             <div class="col-2 text-right">
               <small class="text-muted">some text</small>
@@ -45,12 +41,23 @@
       <div class="card mb-2">
           <div class="card-body p-3">
             <div class="row mb-3">
-              <div class="col-10">
-                  <H1>Price Table</H1>
-                  <div id="table_div_json"></div>
+              <div class="col-2">
+                    <p> Commentary </p>
               </div>
-              <div class="col-2 text-right">
-                <small class="text-muted">some text</small>
+              <div class="col-10 ">
+                    <div class="text-primary">
+                At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+                praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias 
+                excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui 
+                officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum 
+                quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum 
+                soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime 
+                placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. 
+                Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe 
+                eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque 
+                earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores 
+                alias consequatur aut perferendis doloribus asperiores repellat."
+                    </div>
               </div>
             </div>
           </div>
